# espfactory

audio_demo/components/esp-sr/: CMakeLists.txt
audio_demo/components/hardware_driver/: CMakeLists.txt  component.mk
audio_demo/components/hardware_driver/MediaHal/: MediaHal.c
audio_demo/components/hardware_driver/MediaHal/Board/: lyrat_mini_v1_0_board.h  lyrat_mini_v1_1_board.h  lyratd_ft_v1_0_board.h
audio_demo/components/hardware_driver/MediaHal/Codec/: es8311.c  es8311.h
audio_demo/components/hardware_driver/SDCardConfig/: sdcard_init.c
audio_demo/examples/: test.md
audio_demo/examples/esp_chinese_tts/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
audio_demo/examples/esp_chinese_tts/main/: main.c
cam_lcd_demo/: sdkconfig
cam_lcd_demo/main/: main.c
factory_demo/components/OV2640/: ov2640.c
factory_demo/components/OV2640/include/: ov2640.h
led_touch_demo/: sdkconfig  sdkconfig.old
led_touch_demo/main/: led_strip_main.c
screen_demo/: sdkconfig  sdkconfig.old
screen_demo/main/: CMakeLists.txt  pretty_effect.c  pretty_effect.h  spi_master_example_main.c
